--- a/src/app/cockpit/cockpit.component.css
+++ b/src/app/cockpit/cockpit.component.css
@@ -1,24 +1,27 @@
+a.appname:link {
+    color: white;
+    text-decoration: none;
+}
+a.appname:visited{
+    color: white;
+    text-decoration: none;
+}
+a.appname:hover{
+    color: white;
+    text-decoration: none;
+}
+a.appname:active {
+    color: white;
+    text-decoration: none;
+}
+
+
 .version{
     font-size: smaller;
     font-style: normal;
 }
 
-.spacer {
-    flex: 1 1 auto;
+.spacer{
+    flex-grow: 1;
 }
 
-.toolbar-controls{
-    display: flex;
-    background-color: #dbdbdb;
-    padding: .5em;
-    padding-left: 1em;
-}
-
-.toolbar-controls mat-form-field{
-    margin-left: 0em;
-    margin-right: 0.5em;
-}
-
-#content-input{
-    width: 20em;
-}
