--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <h1>Welcome {{userName}}<br />in locale mgmt.</h1>
+    <h1>Welcome {{currentUser.name}}<br />in locale mgmt.</h1>
     <p class="white-text">This app allow you to view, manage, translate, import and export your locale in some common formats.</p>
 </div>
 
